# raise-a-bull

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GUIDE.md  README.md  build_barn.sh  docker-compose.yml  entrypoint.sh  playwright.config.ts  pyproject.toml  raise_bull.sh  template.yaml
.claude-plugin/: marketplace.json
bots/: start-bot.sh  upgrade_bull.sh
docs/: PRD.md  accounts-checklist.md  channel-setup-guide.md  deployment-notes.md  future-improvements.md  install-guide-for-claude.md  managed-paths-policy.md  minimum-ops-baseline.md  prerequisites-for-claude.md
docs/plans/: 2026-03-19-zeabur-deploy.md
docs/screenshots/: README.md
identity/templates/: SOUL.md.template  TOOLS.md.template
plugins/line/: .mcp.json  ACCESS.md  README.md  access.ts  chunking.ts  line.ts  message-buffer.ts  package.json  server.ts  settings.json  token-cache.ts  tsconfig.json
presets/: association.json  bar.json  office.json  shop.json
schemas/: bull.spec.md  managed-state.spec.md  params.spec.md
scripts/: .sanitize-patterns  backup.sh  doctor.sh  feed.sh  raise.sh  sanitize.sh
scripts/git-hooks/: install.sh  pre-push
skills/daily-review/: SKILL.md
skills/document-draft/: SKILL.md
skills/follow-up-tracker/: SKILL.md
skills/image-generation/: SKILL.md
skills/inbox-triage/: SKILL.md
skills/knowledge-base/: SKILL.md
skills/meeting-notes/: SKILL.md
src/raisebull/: __init__.py  audit.py  buffer.py  discord_bot.py  heartbeat.py  main.py  runner.py  session.py  sessions.py  setup_rich_menu.py  stream_buffer.py  trace.py  webhook_line.py
templates/: .env.example  Dockerfile  docker-compose.yml.template
tests/: test_audit_scheduler.py  test_discord_bot.py  test_main.py  test_recovery.py  test_runner.py  test_session.py  test_webhook_line.py
tests/e2e/: audit.spec.ts  dashboard.spec.ts
tests/integration/: test_admin.py  test_attachments.py  test_audit_api.py  test_audit_hooks.py  test_audit_line.py  test_buffer_flow.py  test_chat.py  test_history.py  test_line_webhook.py  test_status.py
tests/smoke/: conftest.py  test_heartbeat_live.py  test_nightly_compact_live.py  test_smoke.py
tests/unit/: test_attachment_router.py  test_audit.py  test_buffer.py  test_heartbeat_parse.py  test_invoice.py  test_three_tier.py  (+7 more)
workspace.example/: AGENTS.md  CLAUDE.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  bull.json  managed-state.json  params.json
(+100 files in other folders)
