[project]
name = "raisebull"
version = "0.1.0"
description = "Open-source personal AI operating system built around Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "line-bot-sdk>=3.0",
    "discord.py>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raisebull"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
