[project]
name = "raisebull"
version = "0.1.0"
description = "Open-source personal AI operating system built around Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "line-bot-sdk>=3.12",
    "discord.py>=2.4",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-docx>=1.2.0",
    "PyMuPDF>=1.24",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "Pillow>=10.0",
    "pycryptodomex>=3.20",
    "pyzbar>=0.1.9",
    "openai>=1.50",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raisebull"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
